@@ -1,11 +1,16 @@
 package com.onlyman.leandash.service;
 
+import com.onlyman.leandash.dto.CalendarEventDto;
 import com.onlyman.leandash.dto.CalendarScheduleRequestDto;
 import com.onlyman.leandash.dto.CalendarScheduleResponseDto;
 import com.onlyman.leandash.entity.CalendarSchedule;
 import com.onlyman.leandash.repository.CalendarScheduleRepository;
+import com.onlyman.leandash.status.CalendarType;
 import org.springframework.stereotype.Service;
 
+import java.time.LocalDate;
+import java.time.LocalDateTime;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -13,9 +18,14 @@ import java.util.stream.Collectors;
 public class CalendarScheduleService {
 
     private final CalendarScheduleRepository calendarScheduleRepository;
+    private final HolidayService holidayService;
 
-    public CalendarScheduleService(CalendarScheduleRepository calendarScheduleRepository) {
+    public CalendarScheduleService(
+            CalendarScheduleRepository calendarScheduleRepository,
+            HolidayService holidayService
+    ) {
         this.calendarScheduleRepository = calendarScheduleRepository;
+        this.holidayService = holidayService;
     }
 
     public CalendarScheduleResponseDto createCalendarSchedule(CalendarScheduleRequestDto requestDto) {
@@ -39,10 +49,23 @@ public class CalendarScheduleService {
     }
 
     public List<CalendarScheduleResponseDto> getAllCalendarSchedules() {
-        return calendarScheduleRepository.findAll()
+        List<CalendarScheduleResponseDto> schedules = calendarScheduleRepository.findAll()
                 .stream()
                 .map(this::toResponseDto)
-                .collect(Collectors.toList());
+                .collect(Collectors.toCollection(ArrayList::new));
+
+        LocalDate startDate = LocalDate.now().minusMonths(3);
+        LocalDate endDate = LocalDate.now().plusMonths(12);
+
+        List<CalendarEventDto> holidays = holidayService.getHolidayEvents(startDate, endDate);
+
+        schedules.addAll(
+                holidays.stream()
+                        .map(this::holidayToScheduleResponseDto)
+                        .toList()
+        );
+
+        return schedules;
     }
 
     public CalendarScheduleResponseDto getCalendarScheduleById(Long scheduleId) {
@@ -53,10 +76,53 @@ public class CalendarScheduleService {
     }
 
     public List<CalendarScheduleResponseDto> getCalendarSchedulesByUserId(Long userId) {
-        return calendarScheduleRepository.findByUserId(userId)
+        List<CalendarScheduleResponseDto> schedules = calendarScheduleRepository.findByUserId(userId)
                 .stream()
                 .map(this::toResponseDto)
-                .collect(Collectors.toList());
+                .collect(Collectors.toCollection(ArrayList::new));
+
+        LocalDate startDate = LocalDate.now().minusMonths(3);
+        LocalDate endDate = LocalDate.now().plusMonths(12);
+
+        List<CalendarEventDto> holidays = holidayService.getHolidayEvents(startDate, endDate);
+
+        schedules.addAll(
+                holidays.stream()
+                        .map(this::holidayToScheduleResponseDto)
+                        .toList()
+        );
+
+        return schedules;
+    }
+
+    private CalendarScheduleResponseDto holidayToScheduleResponseDto(CalendarEventDto holiday) {
+        CalendarScheduleResponseDto responseDto = new CalendarScheduleResponseDto();
+
+        responseDto.setScheduleId(holiday.getScheduleId());
+        responseDto.setUserId(0L);
+        responseDto.setTitle(holiday.getTitle());
+        responseDto.setContent(holiday.getContent());
+
+        LocalDate startDate = holiday.getStartDate();
+        LocalDate endDate = holiday.getEndDate() != null
+                ? holiday.getEndDate()
+                : holiday.getStartDate();
+
+        responseDto.setStartDatetime(startDate.atStartOfDay());
+        responseDto.setEndDatetime(endDate.atTime(23, 59, 59));
+
+        responseDto.setScheduleType(CalendarType.HOLIDAY);
+        responseDto.setIsAllDay(true);
+        responseDto.setDepartmentId(null);
+        responseDto.setIsOfficial(true);
+        responseDto.setIsHoliday(true);
+        responseDto.setColor("#ef4444");
+        responseDto.setRemindAt(null);
+        responseDto.setStatus(null);
+        responseDto.setCreatedAt(LocalDateTime.now());
+        responseDto.setUpdatedAt(LocalDateTime.now());
+
+        return responseDto;
     }
 
     private CalendarScheduleResponseDto toResponseDto(CalendarSchedule calendarSchedule) {
@@ -81,7 +147,7 @@ public class CalendarScheduleService {
 
         return responseDto;
     }
-    
+
     public void deleteCalendarSchedule(Long scheduleId) {
         calendarScheduleRepository.deleteById(scheduleId);
     }
